src/snapshots/rlox__test_runtime__print_assign.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var s;\n        print s = \\\"s\\\";\n        \")"
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:2:12]
   │
 3 │         print s = "s";
   │                 ┬  
   │                 ╰── Invalid assignment at this expression depth
───╯


